Update for deprecated methods which have been removed in Apache SIS.